@@ -32,6 +32,7 @@ Ver.9 (in development)
 - The setUpdatedRecord method in database classes renamed to setDataToUpdatedRecord. For the compatibility, calling the
   setUpdateRecord method more than one parameter redirect to setDataToUpdatedRecord method. The setUpdatedRecord with
   one parameter works as the setter of updatedRecord property.
+- INTER-Mediator can work as the one of libraries that installed by composer.
 
 Ver.8 (July 22, 2021)
 - [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
